Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14134

ProjectExplorer: QC crashes when loading session

XMLWordPrintable

      Steps to reproduce:

      • open QC and the QC-repository in it
      • open any source or header file from src/libs/cplusplus
      • quit QC
      • start QC again by loading the last session

      Current result:

      • QC crashes in projectmodels.cpp:254 (running into a Q_ASSERT)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes