FlatModel: Fix a crash on restoring session

Still wondering how exactly it happens. This results in parent()
returning a invalid QModelIndex() for a valid QModelIndex() which
should not happen, but this prevents the crash.

Also add some minimal logging.

Change-Id: I36559c1f9cda39e8b8a80f487651ad58f7c2cc05
Task-number: QTCREATORBUG-14134
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>